fix: try to use latest mono

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: ruby
 rvm:
   - "2.0.0"
 
+mono:
+  - latest
+
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get -qq install gdb
