fix: travis-ci set kernel.yama.ptrace_scope=0

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,6 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get -qq install gdb
 
-script: bundle exec rspec spec
+script:
+  - sudo sysctl kernel.yama.ptrace_scope=0
+  - bundle exec rspec spec
